@@ -1,3 +1,5 @@
+20090821
+	emu/Nt/^(os.c ie-os.c) add #include <excpt.h>
 20090819
 	appl/cmd/mk/mk.b replace maketmp/mktemp (issue 202, mechiel); also old change: don't persist with bulkmtime on non-directories
 20090816
